--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -16,15 +16,6 @@ jobs:
         with:
           xcode-version: '16.2'
       
-      # 디버깅: 현재 작업 환경 상세 확인
-      - name: Detailed Workspace Debug
-        run: |
-          pwd
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          ls -la
-          echo "Contents of GITHUB_WORKSPACE:"
-          ls -la "$GITHUB_WORKSPACE"
-      
       # App Store Connect API 키 설정
       - name: Setup App Store Connect API Key
         env:
@@ -38,26 +29,22 @@ jobs:
       # 앱 빌드 및 아카이브
       - name: Build and Archive App
         run: |
-          mkdir -p "$GITHUB_WORKSPACE/build"
           xcodebuild archive \
-            -project "$GITHUB_WORKSPACE/PetApp.xcodeproj" \
+            -project PetApp.xcodeproj \
             -scheme "PetApp" \
-            -archivePath "$GITHUB_WORKSPACE/build/app.xcarchive" \
+            -archivePath build/app.xcarchive \
             -destination "generic/platform=iOS" \
             -configuration Release \
+            -skipPackagePluginValidation \
+            -skipMacroValidation \
             -allowProvisioningUpdates \
-            -allowProvisioningDeviceRegistration
-      
-      # 디버그: 아카이브 디렉토리 확인
-      - name: Check Archive Directory
-        run: |
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          ls -la "$GITHUB_WORKSPACE/build"
+            -allowProvisioningDeviceRegistration \
+            -resolvePackageDependencies
       
       # ExportOptions.plist 생성
       - name: Create Export Options Plist
         run: |
-          cat > "$GITHUB_WORKSPACE/ExportOptions.plist" << EOL
+          cat > ExportOptions.plist << EOL
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
           <plist version="1.0">
@@ -70,6 +57,8 @@ jobs:
               <false/>
               <key>uploadSymbols</key>
               <true/>
+              <key>teamID</key>
+              <string>${{ secrets.APPLE_TEAM_ID }}</string>
           </dict>
           </plist>
           EOL
@@ -83,12 +72,6 @@ jobs:
             -exportOptionsPlist "$GITHUB_WORKSPACE/ExportOptions.plist" \
             -exportPath "$GITHUB_WORKSPACE/output" \
             -allowProvisioningUpdates
-      
-      # 디버그: 빌드 디렉토리 확인
-      - name: Check Build Directory
-        run: |
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          ls -la "$GITHUB_WORKSPACE/output"
       
       # TestFlight에 업로드
       - name: Upload to TestFlight
