--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -99,7 +99,7 @@ jobs:
         echo -n "$APP_STORE_CONNECT_API_KEY" > ~/.appstoreconnect/private_keys/AuthKey_$APP_STORE_CONNECT_API_KEY_ID.p8
         echo "App Store Connect API Key setup completed"
     
-    # 아카이브 생성
+    # 아카이브 생성 - 수정된 xcconfig 접근 방식
     - name: Archive App
       env:
         APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
@@ -110,23 +110,23 @@ jobs:
         
         mkdir -p build
         
-        # 수동 서명을 위한 xcconfig 파일 생성
+        # 수정된 xcconfig 파일 형식
         cat > build/manual_signing.xcconfig << EOL
         CODE_SIGN_STYLE = Manual
         DEVELOPMENT_TEAM = ${APPLE_TEAM_ID}
         
-        // 메인 앱 타겟 설정
-        PROVISIONING_PROFILE_SPECIFIER[sdk=iphoneos*][config=Release][bundle=WEDLE.Warala] = ${MAIN_PROFILE_UUID}
-        CODE_SIGN_IDENTITY[sdk=iphoneos*][config=Release] = Apple Distribution
+        // 메인 앱 타겟 설정 - 수정된 형식
+        PROVISIONING_PROFILE_SPECIFIER[sdk=iphoneos*] = ${MAIN_PROFILE_UUID}
+        CODE_SIGN_IDENTITY[sdk=iphoneos*] = Apple Distribution
         
-        // 위젯 타겟 설정
-        PROVISIONING_PROFILE_SPECIFIER[sdk=iphoneos*][config=Release][bundle=WEDLE.Warala.PetAppWidget] = ${WIDGET_PROFILE_UUID}
+        // 위젯 타겟 설정 - 수정된 형식
+        PROVISIONING_PROFILE_SPECIFIER[sdk=iphoneos*] = ${WIDGET_PROFILE_UUID}
         EOL
         
         echo "xcconfig content:"
         cat build/manual_signing.xcconfig
         
-        # 아카이브 빌드 수행
+        # 아카이브 빌드 수행 - 직접 프로비저닝 프로파일 지정
         xcodebuild archive \
         -project PetApp.xcodeproj \
         -scheme "PetApp" \
@@ -136,6 +136,11 @@ jobs:
         -xcconfig build/manual_signing.xcconfig \
         -skipPackagePluginValidation \
         -skipMacroValidation \
+        CODE_SIGN_STYLE="Manual" \
+        PROVISIONING_PROFILE="$MAIN_PROFILE_UUID" \
+        "PROVISIONING_PROFILE[sdk=iphoneos*]"="$MAIN_PROFILE_UUID" \
+        DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+        CODE_SIGN_IDENTITY="Apple Distribution" \
         | tee archivelog.txt || { echo "Archive failed. See log below:"; cat archivelog.txt; exit 1; }
         
         # 아카이브 생성 확인
@@ -207,6 +212,7 @@ jobs:
         -archivePath "$GITHUB_WORKSPACE/build/app.xcarchive" \
         -exportOptionsPlist "$GITHUB_WORKSPACE/ExportOptions.plist" \
         -exportPath "$GITHUB_WORKSPACE/output" \
+        -allowProvisioningUpdates \
         | tee exportlog.txt || { echo "Export failed. See log below:"; cat exportlog.txt; exit 1; }
         
         # IPA 파일 확인
