--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -77,8 +77,8 @@ jobs:
         cp $WIDGET_PROFILE_PATH ~/Library/MobileDevice/Provisioning\ Profiles/widget.mobileprovision
         
         # 프로비저닝 프로파일 UUID 추출
-        MAIN_PROFILE_UUID=$(security cms -D -i $MAIN_PROFILE_PATH | plutil -extract UUID raw -)
-        WIDGET_PROFILE_UUID=$(security cms -D -i $WIDGET_PROFILE_PATH | plutil -extract UUID raw -)
+        MAIN_PROFILE_UUID=$(security cms -D -i $MAIN_PROFILE_PATH | grep -A1 UUID | grep string | cut -d'>' -f2 | cut -d'<' -f1)
+        WIDGET_PROFILE_UUID=$(security cms -D -i $WIDGET_PROFILE_PATH | grep -A1 UUID | grep string | cut -d'>' -f2 | cut -d'<' -f1)
         
         # UUID 출력 (디버깅용)
         echo "Main Provisioning Profile UUID: $MAIN_PROFILE_UUID"
@@ -106,10 +106,12 @@ jobs:
         ls ~/Library/MobileDevice/Provisioning\ Profiles
         echo "\nCode Signing Identities:"
         security find-identity -p codesigning
+        
         echo "\nProfile Details for Main App:"
-        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/main.mobileprovision | plutil -p
+        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/main.mobileprovision
+
         echo "\nProfile Details for Widget:"
-        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/widget.mobileprovision | plutil -p
+        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/widget.mobileprovision
     
     # 아카이브 생성
     - name: Archive App
