--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -151,8 +151,13 @@ jobs:
         DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
         CODE_SIGN_STYLE="Manual" \
         CODE_SIGN_IDENTITY="Apple Distribution" \
-        | tee archivelog.txt || { cat archivelog.txt; exit 1; }
-        
+        CODE_SIGN_IDENTITY[sdk=iphoneos*]="Apple Distribution" \
+        OTHER_CODE_SIGN_FLAGS="--keychain $RUNNER_TEMP/app-signing.keychain-db" \
+        | tee archivelog.txt
+
+        # 아카이브 로그 전체 출력
+        cat archivelog.txt
+
         # 아카이브 생성 확인
         if [ ! -d "build/app.xcarchive" ]; then
           echo "Archive failed to create."
