--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -100,59 +100,31 @@ jobs:
         echo "App Store Connect API Key setup completed"
     
     # 디버깅: 프로비저닝 프로파일 및 인증서 확인
-    - name: Debug Provisioning Profiles
+    - name: Debug Provisioning Profiles and Certificates
       run: |
-        echo "Main App Bundle ID: WEDLE.Warala"
-        echo "Widget App Bundle ID: WEDLE.Warala.PetAppWidget"
+        echo "Installed Provisioning Profiles:"
+        ls ~/Library/MobileDevice/Provisioning\ Profiles
         
-        # 인증서 및 프로비저닝 프로파일 상세 정보 출력
         echo "\nCode Signing Identities:"
         security find-identity -p codesigning
         
-        echo "\nInstalled Provisioning Profiles:"
-        ls ~/Library/MobileDevice/Provisioning\ Profiles
+        echo "\nProfile Details for Main App:"
+        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/main.mobileprovision
         
-        # 각 프로비저닝 프로파일의 세부 정보 출력
-        for profile in ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision; do
-          echo "\nProfile: $profile"
-          security cms -D -i "$profile"
-        done
+        echo "\nProfile Details for Widget:"
+        security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/widget.mobileprovision
     
     # 아카이브 생성
     - name: Archive App
       env:
         APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
       run: |
-        echo "Starting archive process..."
-        
-        mkdir -p build
-        
-        # 수정된 xcconfig 파일 형식
-        cat > build/manual_signing.xcconfig << EOL
-        CODE_SIGN_STYLE = Manual
-        DEVELOPMENT_TEAM = ${APPLE_TEAM_ID}
-        
-        // 메인 앱 타겟 설정 - 수정된 형식
-        PROVISIONING_PROFILE_SPECIFIER[sdk=iphoneos*] = ${MAIN_PROFILE_UUID}
-        CODE_SIGN_IDENTITY[sdk=iphoneos*] = Apple Distribution
-        PRODUCT_BUNDLE_IDENTIFIER = WEDLE.Warala
-        
-        // 위젯 타겟 설정 - 수정된 형식
-        PROVISIONING_PROFILE_SPECIFIER[sdk=iphoneos*] = ${WIDGET_PROFILE_UUID}
-        PRODUCT_BUNDLE_IDENTIFIER = WEDLE.Warala.PetAppWidget
-        EOL
-        
-        echo "xcconfig content:"
-        cat build/manual_signing.xcconfig
-        
-        # 메인 앱 아카이브 빌드 수행
         xcodebuild archive \
         -project PetApp.xcodeproj \
         -scheme "PetApp" \
         -archivePath build/app.xcarchive \
         -destination "generic/platform=iOS" \
         -configuration Release \
-        -xcconfig build/manual_signing.xcconfig \
         -skipPackagePluginValidation \
         -skipMacroValidation \
         DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
@@ -160,16 +132,15 @@ jobs:
         CODE_SIGN_IDENTITY="Apple Distribution" \
         PRODUCT_BUNDLE_IDENTIFIER="WEDLE.Warala" \
         OTHER_CODE_SIGN_FLAGS="--keychain $RUNNER_TEMP/app-signing.keychain-db" \
+        OTHER_SWIFT_FLAGS="-suppress-warnings" \
         | tee archivelog.txt
 
-        # 위젯 앱 아카이브 빌드 수행
         xcodebuild archive \
         -project PetApp.xcodeproj \
         -scheme "PetAppWidgetExtension" \
         -archivePath build/widget.xcarchive \
         -destination "generic/platform=iOS" \
         -configuration Release \
-        -xcconfig build/manual_signing.xcconfig \
         -skipPackagePluginValidation \
         -skipMacroValidation \
         DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
@@ -177,6 +148,7 @@ jobs:
         CODE_SIGN_IDENTITY="Apple Distribution" \
         PRODUCT_BUNDLE_IDENTIFIER="WEDLE.Warala.PetAppWidget" \
         OTHER_CODE_SIGN_FLAGS="--keychain $RUNNER_TEMP/app-signing.keychain-db" \
+        OTHER_SWIFT_FLAGS="-suppress-warnings" \
         | tee widgetarchivelog.txt
         
         # 아카이브 생성 확인
@@ -219,18 +191,14 @@ jobs:
                 <key>WEDLE.Warala.PetAppWidget</key>
                 <string>${WIDGET_PROFILE_UUID}</string>
             </dict>
-            <key>uploadBitcode</key>
-            <false/>
-            <key>uploadSymbols</key>
-            <true/>
             <key>compileBitcode</key>
             <false/>
+            <key>uploadBitcode</key>
+            <false/>
+            <key>teamID</key>
+            <string>${APPLE_TEAM_ID}</string>
             <key>destination</key>
             <string>upload</string>
-            <key>stripSwiftSymbols</key>
-            <true/>
-            <key>iCloudContainerEnvironment</key>
-            <string>Production</string>
         </dict>
         </plist>
         EOL
@@ -245,6 +213,7 @@ jobs:
         
         xcodebuild -exportArchive \
         -archivePath "$GITHUB_WORKSPACE/build/app.xcarchive" \
+        -archivePath "$GITHUB_WORKSPACE/build/widget.xcarchive" \
         -exportOptionsPlist "$GITHUB_WORKSPACE/ExportOptions.plist" \
         -exportPath "$GITHUB_WORKSPACE/output" \
         -allowProvisioningUpdates \
